revised for 125w abstract

--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -17,11 +17,7 @@ results <- readRDS("../local/paper-results.rds")
 
 # Abstract
 
-Much of the richness of human thought is supported by people’s intuitive theories---explanatory mental frameworks that capture the perceived causal and relational structure of the world. But serious consequences can arise when these theories are mistaken. In this paper, we consider an important and timely example of these risks: when misconceptions about vaccine safety discourage vaccination. We argue that addressing misconceptions requires awareness of the broader conceptual contexts in which they are embedded. To this end, we sought to develop a cognitive model of the intuitive theory surrounding vaccination decisions. From qualitative research, we identified a set of beliefs relevant to this intuitive theory. Then, we built our model by surveying a large sample of U.S. adults and applying Bayesian network structure learning algorithms to their responses to uncover the connections among these beliefs (Study 1). The resulting model supports understanding of belief revision within this larger conceptual system: Our model helped to explain belief revision following an established educational intervention (Study 2), provided insight that supported our formulation of a novel educational intervention that successfully increased vaccination intentions (Studies 3a, 3b), and also helped to explain how people’s beliefs changed following real-world events (Study 4). Taken together, this work illustrates the promise of understanding belief revision in terms of intuitive theories and of discovering and formalizing intuitive theories via computational models. Moreover, it lays the foundation for theory-based educational interventions that could encourage people to vaccinate their children and themselves against dangerous diseases like measles and COVID-19.
-
-# Significance Statement
-
-When people decide whether to vaccinate their children and themselves against dangerous diseases like measles and COVID-19, their decisions are affected by a network of interrelated beliefs about specific diseases, vaccine safety and efficacy, the immune system, the medical system, health, and nature more generally. By creating a computational model of the intuitive theory connecting these different beliefs, we were able to make accurate predictions about how these beliefs are revised in light of educational interventions, design an effective new intervention encouraging vaccination, and understand how these beliefs were affected by real-world events. This approach provides the foundation for richer understandings of intuitive theories more broadly and sheds new light on long-standing theoretical questions about belief revision. 
+Much of the richness of human thought is supported by people’s intuitive theories---mental frameworks capturing the perceived structure of the world. But intuitive theories can sometimes contain and reinforce misconceptions, such as misconceptions about vaccine safety that discourage vaccination. We argue that addressing misconceptions requires awareness of the broader conceptual contexts in which they are embedded. Here, we developed a cognitive model of the intuitive theory surrounding vaccination decisions. Using this model, we were able to make accurate predictions about how people's beliefs would be revised in light of educational interventions, design an effective new intervention encouraging vaccination, and understand how these beliefs were affected by real-world events. This approach provides the foundation for richer understandings of intuitive theories and belief revision more broadly.
 
 \newpage
 
