fixes to install

--- a/supplement/supplement-main.Rmd
+++ b/supplement/supplement-main.Rmd
@@ -11,7 +11,8 @@ csl: pnas.csl
 figsintext : yes
 always_allow_html: true
 header-includes:
- \usepackage{float}
+  - \usepackage{float}
+  - \usepackage{setspace}\doublespacing
 ---
 
 ```{r setup, include=FALSE}
