edits ahead of preprint

--- a/supplement/references.bib
+++ b/supplement/references.bib
@@ -575,6 +575,20 @@
   lccn = {GN476.7 .F65 1999}
 }
 
+@article{motta.etal2021,
+	title = {Encouraging {COVID}-19 {Vaccine} {Uptake} {Through} {Effective} {Health} {Communication}},
+	volume = {3},
+	issn = {2673-3145},
+	url = {https://www.frontiersin.org/article/10.3389/fpos.2021.630133},
+	abstract = {Context: Overcoming the COVID-19 pandemic will require most Americans to vaccinate against the virus. Unfortunately, previous research suggests that many Americans plan to refuse a vaccine; thereby jeopardizing collective immunity. We investigate the effectiveness of three different health communication frames hypothesized to increase vaccine intention; emphasizing either 1) personal health risks, 2) economic costs, or 3) collective public health consequences of not vaccinating.Methods: In a large (N = 7,064) and demographically representative survey experiment, we randomly assigned respondents to read pro-vaccine communication materials featuring one of the frames listed above. We also randomly varied the message source (ordinary people vs. medical experts) and availability of information designed the “pre-bunk” potential misinformation about expedited clinical trial safety.Findings: We find that messages emphasizing the personal health risks and collective health consequences of not vaccinating significantly increase Americans’ intentions to vaccinate. These effects are similar in magnitude irrespective of message source, and the inclusion of pre-bunking information. Surprisingly, economic cost frames have no discernible effect on vaccine intention. Additionally, despite sharp partisan polarization in public vaccination intentions, we find that these effects are no different for Democrats, Republicans, and Independents alike.Conclusion: Health communicators hoping to encourage vaccination may be effective by appealing to the use personal and collective health risks of not vaccinating.},
+	urldate = {2022-02-08},
+	journal = {Frontiers in Political Science},
+	author = {Motta, Matt and Sylvester, Steven and Callaghan, Timothy and Lunz-Trujillo, Kristin},
+	year = {2021},
+	file = {Motta et al-2021-Encouraging COVID-19 Vaccine Uptake Through Effective Health Communication.pdf:/Users/derekpowell/Documents/Papers/Motta et al-2021-Encouraging COVID-19 Vaccine Uptake Through Effective Health Communication.pdf:application/pdf},
+}
+
+
 @article{murphy.medin1985,
   title = {The Role of Theories in Conceptual Coherence.},
   author = {Murphy, Gregory L. and Medin, Douglas L.},
