--- a/supplement/supplement-main.Rmd
+++ b/supplement/supplement-main.Rmd
@@ -7,7 +7,7 @@ output:
     latex_engine: xelatex
     fig_caption: yes
 bibliography: references.bib
-csl: pnas.csl
+csl: apa7.csl
 figsintext : yes
 always_allow_html: true
 header-includes:
@@ -191,7 +191,7 @@ theory_bl <- tiers2blacklist(
     )
   )
 
-# this is the favorite son (most likely)
+
 main_model <- hc(train, blacklist=theory_bl, score="custom", fun=cog_model_score_func, maxp=5, max.iter=1e3, restart=5)
 ```
 
@@ -693,7 +693,7 @@ However, sometimes reasoners have only indirect evidence at their disposal. For 
 
 To model the effects of participants observing evidence, we augmented the Bayesian network representing the cognitive model (shown in Figure 4) with an additional node representing the evidence. For instance, to model the effects of the “disease risk” intervention (Study 2), we added an evidence node as a child of “disease severity,” acting as virtual evidence for this node. To compute the CPT for this node as a function of disease severity beliefs, we estimated an _evidence ratio_ based on participants’ pretest and posttest credences in disease severity. To so do, we made use of the log-odds expression of Bayes rule,
 
-$$ log\big(O(h|d)\big) = log\big(O(h)\big) + ln\Big(\frac{P(d|h=1)}{P(d|h=0)}\Big) $$
+$$ log\big(O(h|d)\big) = \ln\big(O(h)\big) + \ln\Big(\frac{P(d|h=1)}{P(d|h=0)}\Big) $$
 
 Where the final term is the evidence ratio, defined as:
 
@@ -820,15 +820,15 @@ ggplot(temp_cor_df,
 
 ### Participants.
 
-We recruited `r s2_meta$n_recruited` people to participate in a two-day study via mTurk in April 2018. Two days later, participants who completed part 1 and passed attention checks were invited via email to participate in Day 2 of the study, with `r s2_meta$n_recruited_post` participants returning (`r s2_meta$n_eligible` invited, retaining `r round(s2_meta$n_recruited_post/s2_meta$n_eligible*100, 1)`% of the Day 1 sample). Participants were paid \$1.35 for their participation in each phase of the study. `r s2_meta$n_failed_post` participants (`r round( (s2_meta$n_failed_post/s2_meta$n_recruited_post)*100, 1)`%) failed at least one attention check on Day 2 and were excluded from further analysis. We also excluded from analyses `r s2_meta$n_duplicate` additional participants who accessed the second survey more than once. This left a final sample of `r s2_meta$n_complete` participants.
+We recruited `r s2_meta$n_recruited` people to participate in a two-part study via mTurk in April 2018. Two days later, participants who completed Phase 1 and passed attention checks were invited via email to participate in Phase 2 of the study, with `r s2_meta$n_recruited_post` participants returning (`r s2_meta$n_eligible` invited, retaining `r round(s2_meta$n_recruited_post/s2_meta$n_eligible*100, 1)`% of the Phase 1 sample). Participants were paid \$1.35 for their participation in each phase of the study. `r s2_meta$n_failed_post` participants (`r round( (s2_meta$n_failed_post/s2_meta$n_recruited_post)*100, 1)`%) failed at least one attention check in Phase 2 and were excluded from further analysis. We also excluded from analyses `r s2_meta$n_duplicate` additional participants who accessed the second survey more than once. This left a final sample of `r s2_meta$n_complete` participants.
 
 ### Method.
 
-Procedures for part 1 of Study 2 were nearly identical to Study 1, save for the use of four rather than two attention check questions, and the removal of debriefing statements at the end of the survey. On Day 2 (approximately two days later), participants completed a study that was designed to be very similar to Horne, Powell, et al.’s [-@horne.etal2015] original study. Participants were randomly assigned to either the disease risk condition or the no-intervention condition, with the constraint that the distributions of participants’ Day 1 _vaccine intentions_ should be similar across the two conditions; we accomplished this by stratifying participants into groups based on their pretest vaccine intentions, and randomly assigning them to conditions in equal numbers within each group.
+Procedures for Phase 1 of Study 2 were nearly identical to Study 1, save for the use of four rather than two attention check questions, and the removal of debriefing statements at the end of the survey. In Phase 2 (approximately two days later), participants completed a study that was designed to be very similar to Horne, Powell, et al.’s [-@horne.etal2015] original study. Participants were randomly assigned to either the disease risk condition or the no-intervention condition, with the constraint that the distributions of participants’ Phase 1 _vaccine intentions_ should be similar across the two conditions; we accomplished this by stratifying participants into groups based on their pretest vaccine intentions, and randomly assigning them to conditions in equal numbers within each group.
 
 Participants were presented with a slightly modified version of the “disease risk” intervention from Horne et al.’s [-@horne.etal2015] original study, which was based on materials available on the CDC website. Compared with Horne et al. [-@horne.etal2015], we modified the intervention to present these parts in a fixed (rather than randomized) order, made slight changes to wording to improve clarity, and added a final statement summarizing the take-home message of the intervention. Full text of this intervention can be found in appendix B of these supplementary materials.
 
-After reading this intervention, participants completed the same 14 belief scales that they had completed on Day 1. Finally, participants were asked about their own vaccination behavior, including whether they had received a flu shot this season, and whether they planned to get a flu shot next season. They were also asked whether they were parents, how many children they had, and their children’s ages. Parents were then asked additional questions about their vaccination decisions regarding their children, including whether their children had received flu shots and would receive them next season; whether they had ever chosen to delay a vaccine for their child; refused a vaccine for their child; or obtained an exemption for their child to attend school without a vaccination. At the end of the survey, participants were asked whether they had paid attention, avoided distractions, and taken the survey seriously.
+After reading this intervention, participants completed the same 14 belief scales that they had completed in Phase 1. Finally, participants were asked about their own vaccination behavior, including whether they had received a flu shot this season, and whether they planned to get a flu shot next season. They were also asked whether they were parents, how many children they had, and their children’s ages. Parents were then asked additional questions about their vaccination decisions regarding their children, including whether their children had received flu shots and would receive them next season; whether they had ever chosen to delay a vaccine for their child; refused a vaccine for their child; or obtained an exemption for their child to attend school without a vaccination. At the end of the survey, participants were asked whether they had paid attention, avoided distractions, and taken the survey seriously.
 
 Participants in the no-intervention condition (_n_ = `r sum(s2_demo$condition=="noInterv")`) completed an identical set of questions, except that they did not read any material before completing the 14 belief scales and the questions about their personal background.
 
@@ -1076,18 +1076,18 @@ Guided by these predictions, we identified beliefs about toxins in vaccines as a
 
 ### Participants.
 
-We recruited `r s3_meta$n_recruited` people to participate in a two-day study via mTurk in April (Experiment 3A) and June (Experiment 3B) of 2019. One day after their initial participation, participants who completed part 1 and passed attention checks were invited via email to participate in Day 2 of the study, with `r s3_meta$n_recruited_post` participants returning (`r s3_meta$n_eligible` invited, retaining `r round(s3_meta$n_recruited_post/s3_meta$n_eligible*100,1)`% of the Day 1 sample). Participants were paid \$1.35 for their participation in each phase of the study and were allowed to participate in part 2 up to two days after their initial participation in part 1. `r s3_meta$n_failed_post` participants (`r round( (s3_meta$n_failed_post/s3_meta$n_recruited_post)*100,1)`%) failed at least one attention check on Day 2 and were excluded from further analysis.  This left a final sample of `r s3_meta$n_complete` participants.
+We recruited `r s3_meta$n_recruited` people to participate in a two-part study via mTurk in April (Experiment 3A) and June (Experiment 3B) of 2019. One day after their initial participation, participants who completed Phase 1 and passed attention checks were invited via email to participate in Phase 2 of the study, with `r s3_meta$n_recruited_post` participants returning (`r s3_meta$n_eligible` invited, retaining `r round(s3_meta$n_recruited_post/s3_meta$n_eligible*100,1)`% of the Phase 1 sample). Participants were paid \$1.35 for their participation in each phase of the study and were allowed to participate in Phase 2 up to two days after their initial participation in Phase 1. `r s3_meta$n_failed_post` participants (`r round( (s3_meta$n_failed_post/s3_meta$n_recruited_post)*100,1)`%) failed at least one attention check in Phase 2 and were excluded from further analysis.  This left a final sample of `r s3_meta$n_complete` participants.
 
 
 ### Methods.
 
-Procedures for studies 3a and 3b closely followed those of Study 2, but these studies tested the effects of a novel intervention aimed at dispelling concerns about toxic additives in vaccines. Full text of this intervention is available in Appendix C of these supplementary materials. In both studies, participants were randomly assigned to either a no-intervention control condition or to the novel Vaccine Ingredients intervention.
+Procedures for Studies 3a and 3b closely followed those of Study 2, but these studies tested the effects of a novel intervention aimed at dispelling concerns about toxic additives in vaccines. Full text of this intervention is available in Appendix C of these supplementary materials. In both studies, participants were randomly assigned to either a no-intervention control condition or to the novel Vaccine Ingredients intervention.
 
 ### Results.
 
-Due to the similarity of their designs, we combined data from studies 3a and 3b for our primary analysis. However, for full transparency we first describe analyses for these studies individually. As in Experiment 2, we conducted a mixed-effects Bayesian ordinal regression to assess the effects of the Vaccine Ingredients intervention on participants’ _Vaccination Intentions_ scores. The Vaccine Ingredients intervention improved participant’s vaccination intention scores relative to a no-intervention control condition. Tables below show the results of these regression analyses for Experiment 3a, 3b, and the two studies combined. In each analysis, the coefficient representing the interaction between phase and condition is positive and credibly differs from zero, indicating that the Vaccine Ingredients intervention positively impacted vaccination intentions.
+Due to the similarity of their designs, we combined data from Studies 3a and 3b for our primary analysis. However, for full transparency we first describe analyses for these studies individually. As in Study 2, we conducted a mixed-effects Bayesian ordinal regression to assess the effects of the Vaccine Ingredients intervention on participants’ _Vaccination Intentions_ scores. The Vaccine Ingredients intervention improved participant’s vaccination intention scores relative to a no-intervention control condition. Tables below show the results of these regression analyses for Studies 3a, 3b, and the two studies combined. In each analysis, the coefficient representing the interaction between phase and condition is positive and credibly differs from zero, indicating that the Vaccine Ingredients intervention positively impacted vaccination intentions.
 
-However, it is worth noting that reliable changes were also observed from pretest to posttest in the control conditions in both experiments (indicated by a credibly non-zero phase coefficient in each corresponding table). Observing this in Experiment 3a, we suspected that these attitudes were also being influenced by other factors during the course of the study. Approximately two months later we conducted Experiment 3b. However, we found similar patterns of changes in this later study as well. We now speculate that news of an ongoing measles outbreak at the time of these studies (Spring of 2019) may have influenced participants’ beliefs about vaccines, although it is not obvious what specific news stories could have caused these shifts from one day to the next.
+However, it is worth noting that reliable changes were also observed from pretest to posttest in the control conditions in both experiments (indicated by a credibly non-zero phase coefficient in each corresponding table). Observing this in Study 3a, we suspected that these attitudes were also being influenced by other factors during the course of the study. Approximately two months later we conducted Study 3b. However, we found similar patterns of changes in this later study as well. We now speculate that news of an ongoing measles outbreak at the time of these studies (Spring of 2019) may have influenced participants’ beliefs about vaccines, although it is not obvious what specific news stories could have caused these shifts from one day to the next.
 
 ```{r tab3-s3_reg, echo=FALSE, message=F, warning=F}
 # compare conditions on vaccIntent w/ regression model
@@ -1196,7 +1196,9 @@ fit_s3b_vaccIntent %>%
 make_table("Bayesian regression model coefficients for model of Vaccine Intentions in Experiment 3b.")
 ```
 
-To model the effect of the Vaccine Ingredients intervention, we followed the same procedure as in Study 2, but this time augmented the model with a node representing the Vaccine Ingredients intervention as a child of the _vaccine toxicity_ belief node.  To simulate the impacts of this evidence, we supplied virtual evidence to the _vaccine toxicity_ node by adding a child node to the cognitive-model network with a CPT capturing this evidence ratio.
+To model the effect of the Vaccine Ingredients intervention, we followed the same procedure as in Study 2, but this time augmented the model with a node representing the Vaccine Ingredients intervention as a child of the _vaccine toxicity_ belief node. To simulate the impacts of this evidence, we supplied virtual evidence to the _vaccine toxicity_ node by adding a child node to the cognitive-model network with a CPT capturing this evidence ratio.
+
+After our initial preregistration for Study 3a and 3b, we did slightly modify our model-fitting approach for the data in Study 1. This means that the final model being compared differs slightly from the exact numerical predictions of the preregistration. 
 
 ```{r fig9-s3_plot, echo=F, message=F, warning=F, fig.width=8, fig.height=4, fig.cap="Belief changes following the intervention in Experiments 3a and 3b. Left, mean difference scores from pretest to posttest for the 14 belief scales across experimental conditions; our primary outcome of interest, vaccination intentions, is highlighted in yellow. Right, mean observed and model predicted change scores for the Vaccine Ingredients intervention condition. In both plots, error bars represent 95\\% confidence intervals."}
 
