--- a/supplement/references.bib
+++ b/supplement/references.bib
@@ -256,6 +256,16 @@
   primaryclass = {cs, stat}
 }
 
+@techreport{gallup2021,
+	title = {More in {U}.{S}. {Vaccinated} {After} {Delta} {Surge}, {FDA} {Decision}},
+	url = {https://news.gallup.com/poll/355073/vaccinated-delta-surge-fda-decision.aspx},
+	urldate = {2022-02-10},
+	institution = {Gallup},
+	author = {Gallup},
+	month = sep,
+	year = {2021},
+}
+
 @article{gelman.legare2011,
   title = {Concepts and {{Folk Theories}}},
   author = {Gelman, Susan A. and Legare, Cristine H.},
@@ -487,6 +497,25 @@
   publisher = {{Cambridge University Press}},
   doi = {10.1017/CBO9780511752902.010},
   isbn = {978-0-521-41966-6 978-0-521-42993-1 978-0-511-75290-2}
+}
+
+@incollection{kahan2016,
+	title = {The {Politically} {Motivated} {Reasoning} {Paradigm}, {Part} 1: {What} {Politically} {Motivated} {Reasoning} {Is} and {How} to {Measure} {It}},
+	isbn = {978-1-118-90077-2},
+	shorttitle = {The {Politically} {Motivated} {Reasoning} {Paradigm}, {Part} 1},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/9781118900772.etrds0417},
+	abstract = {Recent research identifies politically motivated reasoning as the source of persistent public conflict over policy-relevant facts. This essay, the first in a two-part set, presents a basic conceptual model—the Politically Motivated Reasoning Paradigm—and an experimental setup—the PMRP design—geared to distinguishing the influence of PMRP from a truth-seeking Bayesian process of information processing and from recurring biases understood to be inimical to the same. It also discusses alternative schemes for operationalizing “motivating” group predispositions and the characteristics of valid study samples for examining this phenomenon.},
+	language = {en},
+	urldate = {2022-02-10},
+	booktitle = {Emerging {Trends} in the {Social} and {Behavioral} {Sciences}},
+	publisher = {John Wiley \& Sons, Ltd},
+	author = {Kahan, Dan M.},
+	year = {2016},
+	doi = {10.1002/9781118900772.etrds0417},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/9781118900772.etrds0417},
+	keywords = {information processing, motivation, policy, politically motivated reasoning, public conflict},
+	pages = {1--16},
+	file = {Snapshot:/Users/derekpowell/Zotero/storage/RSKLAGEC/9781118900772.html:text/html},
 }
 
 @article{kunda1990,
