--- a/paper/paper-papaja.Rmd
+++ b/paper/paper-papaja.Rmd
@@ -47,12 +47,12 @@ authornote: |
   All data, and analysis code for this project are available at https://osf.io/sdfpj/. Preregistration information for Studies 3a and 3b is available at https://osf.io/csnez/registrations.
 
 abstract: |
-  Much of the richness of human thought is supported by people’s intuitive theories---mental frameworks capturing the perceived structure of the world. But intuitive theories can also contain and reinforce dangerous misconceptions. In this paper we take up the case of misconceptions about vaccine safety that discourage vaccination. These misconceptions constitute a major public health risk that predates the coronavirus pandemic but that has become all the more dire in recent years. We argue that addressing such misconceptions requires awareness of the broader conceptual contexts in which they are embedded. To build this understanding, we examined the structure and revision of people’s intuitive theories of vaccination in five large survey studies (total _N_ = 3196). Based on these data, we present a cognitive model of the intuitive theory surrounding people’s decisions about whether to vaccinate young children against diseases like measles, mumps, and rubella (MMR). Using this model, we were able to make accurate predictions about how people’s beliefs would be revised in light of educational interventions, design an effective new intervention encouraging vaccination, and understand how these beliefs were affected by real-world events (the measles outbreaks of 2019). In addition to presenting a promising way forward for promoting the MMR vaccine, this approach has clear implications for encouraging the uptake of COVID-19 vaccines, especially among parents of young children. At the same time, this work provides the foundation for richer understandings of intuitive theories and belief revision more broadly.
+  Much of the richness of human thought is supported by people’s intuitive theories---mental frameworks capturing the perceived structure of the world. But intuitive theories can also contain and reinforce dangerous misconceptions. In this paper, we take up the case of misconceptions about vaccine safety that discourage vaccination. These misconceptions constitute a major public health risk that predates the coronavirus pandemic but that has become all the more dire in recent years. We argue that addressing such misconceptions requires awareness of the broader conceptual contexts in which they are embedded. To build this understanding, we examined the structure and revision of people’s intuitive theories of vaccination in five large survey studies (total _N_ = 3196). Based on these data, we present a cognitive model of the intuitive theory surrounding people’s decisions about whether to vaccinate young children against diseases like measles, mumps, and rubella (MMR). Using this model, we were able to make accurate predictions about how people’s beliefs would be revised in light of educational interventions, design an effective new intervention encouraging vaccination, and understand how these beliefs were affected by real-world events (the measles outbreaks of 2019). In addition to presenting a promising way forward for promoting the MMR vaccine, this approach has clear implications for encouraging the uptake of COVID-19 vaccines, especially among parents of young children. At the same time, this work provides the foundation for richer understandings of intuitive theories and belief revision more broadly.
   
   <!-- https://tinyurl.com/ybremelq -->
   
-keywords          : "keywords"
-wordcount         : "X"
+keywords          : "Intuitive theories; Belief revision; Vaccine attitudes; Cognitive modeling"
+wordcount         : "9163"
 
 bibliography      : ["../supplement/references.bib"]
 
@@ -85,12 +85,12 @@ One remarkable feature of human psychology is our ability to form rich mental re
 
 Because intuitive theories are such powerful tools for making sense of the world, when these theories are mistaken there can be serious consequences. In this paper, we focus on an important and timely example: misconceptions about vaccine safety.
 
-Even before the coronavirus pandemic, misconceptions about vaccine safety drove public health crises around the world. Undervaccination resulted in outbreaks of measles affecting over 1000 children across the United States in 2019, and over 80,000 children across Europe in 2018 [@thornton2019]. Misconceptions about childhood vaccination---particularly the fraudulent claim that vaccines cause autism or other dangerous side-effects---have proved remarkably difficult to correct [e.g., @betsch.sachse2013; @horne.etal2015]. Sadly, only a handful of educational interventions have been found to improve vaccine attitudes [e.g., @dube.etal2015; @horne.etal2015; @vannice.etal2011; @wallace.etal2006]. This is especially  sobering in the context of the coronavirus pandemic: widespread reluctance to be vaccinated against COVID-19 threatens our ability to end a pandemic that has already claimed more than five million lives around the world.
+Even before the coronavirus pandemic, misconceptions about vaccine safety drove public health crises around the world. Undervaccination resulted in outbreaks of measles affecting over one thousand children across the United States in 2019, and over 80,000 children across Europe in 2018 [@thornton2019]. Misconceptions about childhood vaccination---particularly the fraudulent claim that vaccines cause autism or other dangerous side-effects---have proved remarkably difficult to correct [e.g., @betsch.sachse2013; @horne.etal2015]. Sadly, only a handful of educational interventions have been found to improve vaccine attitudes [e.g., @dube.etal2015; @horne.etal2015; @vannice.etal2011; @wallace.etal2006]. This is especially  sobering in the context of the coronavirus pandemic: widespread reluctance to be vaccinated against COVID-19 threatens our ability to end a pandemic that has already claimed more than five million lives around the world.
 
 The difficulty of convincing people to vaccinate themselves and their children illustrates a general pattern of findings showing that people often do not respond to evidence in ways that educators might wish [e.g. @lewandowsky.etal2012]. Part of the challenge in correcting misconceptions is that they are situated within larger, internally coherent belief systems---intuitive theories---that guide how people interpret and respond to evidence [e.g., @gershman2019; @lewandowsky.etal2012; @jern.etal2014]. 
 Consider some of the beliefs people who are skeptical of childhood vaccination expressed when we asked them to explain their views in an open-ended qualitative survey (conducted pre-pandemic; _n_ = 16). Several participants saw vaccines as “unnatural” and expressed concerns about toxic additives in vaccines, such as heavy metals and mercury. One said, “Vaccines are unnatural additions to the body. The human body should naturally fight off the disease and we should not be controlling how nature plays its role on mankind.” Some doubted whether certain diseases were worth worrying over, while others feared that the contents of vaccines “are too strong and too concentrated for a baby’s body to properly handle.” A number of respondents were skeptical of the medical community’s objectivity in testing the safety of vaccines. One respondent wrote that vaccines were “A BIG MONEY MAKING SCAM BY THE BIG PHARMS” (emphasis theirs); another thought that health professionals “are brainwashed by the medical media and the government.” 
 
-To people holding these beliefs, it could well seem unreasonable to vaccinate a 2-month-old baby against 5 or more diseases at once, as the CDC recommends. Moreover, if skeptics believe that the medical community is unduly influenced by pharmaceutical companies, they might doubt the validity of medical findings that appear to favor these companies’ interests. Altogether, these beliefs might sustain misconceptions about vaccine safety, even in the face of counter-evidence: CDC guidelines, clinical studies, even the advice of the family’s pediatrician could be interpreted not as evidence that vaccines are safer than the person thought, but instead as further proof of the widespread corruption in the medical community.
+To people holding these beliefs, it could well seem unreasonable to vaccinate a 2-month-old baby against five or more diseases at once, as the CDC recommends. Moreover, if skeptics believe that the medical community is unduly influenced by pharmaceutical companies, they might doubt the validity of medical findings that appear to favor these companies’ interests. Altogether, these beliefs might sustain misconceptions about vaccine safety, even in the face of counter-evidence: CDC guidelines, clinical studies, and even the advice of the family’s pediatrician could be interpreted not as evidence that vaccines are safer than the person thought, but instead as further proof of the widespread corruption in the medical community.
 
 The way in which evidence affects any particular belief is unavoidably shaped by other interrelated beliefs. Duhem [-@duhem1954] and Quine [-@quine1951] famously argued that scientific theories necessarily incorporate *auxiliary hypotheses* that influence how observations are interpreted: when an observation is inconsistent with a hypothesis under certain auxiliary assumptions, a scientist cannot know whether to revise the hypothesis or the auxiliary assumptions. Similarly, we argue that intuitive theories incorporate auxiliary beliefs that affect how other beliefs are revised in light of evidence: when an observation is inconsistent with a person’s current belief under certain auxiliary assumptions, the person cannot know whether to revise the belief or the auxiliary assumptions [also see @gershman2019]. 
 
@@ -102,11 +102,11 @@ We argue that correcting misconceptions requires presenting evidence in a way th
 
 Quine argued that all of one’s beliefs are intertwined in a “web of belief” [@quine1951; @quine.ullian1978]---an apt metaphor for intuitive theories. Intuitive theories consist of relations between beliefs that specify how states of affairs causally, logically, or otherwise interconnect with one another. Given this definition, we argue that any set of beliefs related by an intuitive theory can be expected to exhibit several qualitative features:
 
-1) Where beliefs about two states of affairs, A and B, are related through a shared intuitive theory (e.g., A causes B), those beliefs will be systematically correlated across individuals (e.g., people who believe A will also tend to believe B); 
+1) Where beliefs about two states of affairs, A and B, are related through a shared intuitive theory (e.g., A causes B), those beliefs will be systematically correlated across individuals (e.g. people who believe A will also tend to believe B); 
 
-2) When two beliefs are related by an intuitive theory, evidence affecting one of those beliefs will also affect the other in accordance with their relationship in the intuitive theory (e.g., evidence for B will increase credence in A, and vice versa).
+2) When two beliefs are related by an intuitive theory, evidence affecting one of those beliefs will also affect the other in accordance with their relationship in the intuitive theory (e.g. evidence for B will increase credence in A, and vice versa).
 
-3) Thus, across individuals, the average change in one belief following evidence affecting another belief will be proportional to the correlation between those beliefs across individuals (evidence for B will increase credence in A in proportion to the correlation between beliefs A and B). 
+3) Thus, across individuals, the average change in one belief following evidence affecting another belief will be proportional to the correlation between those beliefs across individuals (e.g. evidence for B will increase credence in A in proportion to the correlation between beliefs A and B). 
 
 Here, we sought to formalize this understanding of intuitive theories by representing an intuitive theory as a Bayesian network. Originally designed as tools for artificial intelligence [@pearl1988], Bayesian networks are a class of probabilistic graphical models that have been deployed widely across cognitive science [e.g. @gopnik.etal2004; @jern.etal2014; @griffiths.tenenbaum2005]. The heart of a Bayesian network is a graphical structure ---not unlike a "web of belief"---that represents variables as nodes connected by edges, where those edges represent probabilistic or statistical relations.
 
@@ -225,9 +225,9 @@ From a set of potentially relevant beliefs and a general principle guiding the l
 
 ## Study 2: Targeting disease severity beliefs
 
-Very few educational interventions have been shown to improve attitudes toward childhood vaccination. One of the few successful educational interventions in this domain was tested by Horne et al. [-@horne.etal2015], who found that emphasizing the dangers of preventable diseases like mumps, measles, and rubella improved participants’ attitudes toward vaccines. Their intervention included descriptions of the symptoms of mumps, measles, and rubella; vivid photos of children suffering from these diseases; and a brief story from the perspective of a parent whose child was hospitalized with measles (see SI). This “disease risk” intervention improved attitudes toward vaccines compared to an irrelevant control essay and compared to an intervention aimed at debunking concerns about vaccines causing autism. In Study 2, we aimed to replicate this success and leverage the cognitive model developed in Study 1 to gain insight into how and why such an intervention successfully induces  belief revision in this domain.
+Very few educational interventions have been shown to improve attitudes toward childhood vaccination. One of the few successful educational interventions in this domain was tested by Horne and colleagues [-@horne.etal2015], who found that emphasizing the dangers of preventable diseases like mumps, measles, and rubella improved participants’ attitudes toward vaccines. Their intervention included descriptions of the symptoms of mumps, measles, and rubella; vivid photos of children suffering from these diseases; and a brief story from the perspective of a parent whose child was hospitalized with measles (see SI). This “disease risk” intervention improved attitudes toward vaccines compared to an irrelevant control essay and compared to an intervention aimed at debunking concerns about vaccines causing autism. In Study 2, we aimed to replicate this success and leverage the cognitive model developed in Study 1 to gain insight into how and why such an intervention successfully induces  belief revision in this domain.
 
-In Study 2, we used the belief network established in Study 1 to predict how Horne et al.’s [-@horne.etal2015] intervention would affect the beliefs in this network, including people’s intentions to vaccinate their children. Participants completed the 14 belief scales from Study 1, then returned two days later to complete either the disease risk intervention or a no-intervention control, followed by the same 14 belief scales.
+In Study 2, we used the belief network established in Study 1 to predict how Horne and colleagues’ [-@horne.etal2015] intervention would affect the beliefs in this network, including people’s intentions to vaccinate their children. Participants completed the 14 belief scales from Study 1, then returned two days later to complete either the disease risk intervention or a no-intervention control, followed by the same 14 belief scales.
 
 ### Method
 
@@ -237,9 +237,9 @@ We recruited `r results$s2$demo$n_recruited` people to participate in a two-day 
 
 #### Procedure
 
-Procedures for Phase 1 of Study 2 were nearly identical to those of Study 1, but the debriefing statement was moved to the end of Phase 2. In Phase 2 (approximately two days later), participants completed a study very similar to Horne et al.’s (2015) original intervention study. Participants were randomly assigned to either the disease risk condition or a no-intervention control condition, with the constraint that the distributions of participants’ Phase 1 *vaccine intentions* scores should be similar across the two conditions; we accomplished this by stratifying participants into three groups based on their pretest vaccine intentions, and randomly assigning them to conditions in equal numbers within each group. 
+Procedures for Phase 1 of Study 2 were nearly identical to those of Study 1, but the debriefing statement was moved to the end of Phase 2. In Phase 2 (approximately two days later), participants completed a study very similar to Horne and colleagues' (2015) original intervention study. Participants were randomly assigned to either the disease risk condition or a no-intervention control condition, with the constraint that the distributions of participants’ Phase 1 *vaccine intentions* scores should be similar across the two conditions; we accomplished this by stratifying participants into three groups based on their pretest vaccine intentions, and randomly assigning them to conditions in equal numbers within each group. 
 
-Participants (*n* = `r results$s2$demo$n_complete` passed attention checks in total) in the intervention conditions were presented with a version of Horne et al.’s  “disease risk” intervention, modified to present subparts in a fixed (rather than randomized) order, with slight changes to wording to improve clarity, and with a final statement summarizing the take-home message of the intervention; see SI. They then completed the same 14 belief scales and demographic questions that they had completed in Phase 1. 
+Participants (*n* = `r results$s2$demo$n_complete` passed attention checks in total) in the intervention conditions were presented with a version of Horne and colleagues'  “disease risk” intervention, modified to present subparts in a fixed (rather than randomized) order, with slight changes to wording to improve clarity, and with a final statement summarizing the take-home message of the intervention; see SI. They then completed the same 14 belief scales and demographic questions that they had completed in Phase 1. 
 
 Participants in the no-intervention condition completed the belief scales and demographics questions without reading any material first.
 
@@ -251,7 +251,7 @@ Figure 3 shows the change in participants’ attitudes across all 14 belief scal
 s2_reg <- summary(results$s2$reg)
 ```
 
-We conducted a mixed-effects Bayesian ordinal regression to assess the effects of the disease risk intervention on responses to the *Vaccination Intentions* scale items, using the “brms” package for R [@burkner2017]. We regressed responses on phase (Phase 1 vs. 2, dummy-coded with Phase 1 as the baseline), condition (dummy-coded with the disease risk condition as the baseline, so as to assess difference scores in our condition of primary interest), and the interaction between phase and condition. We included random intercepts by subject and scale item. In this model, the unique effect of the intervention on vaccination intention scores is assessed by the interaction term (indicating the unique effect of Phase 2 for intervention versus no-intervention participants). The disease risk intervention increased participants’ vaccination intention ratings (interaction effect: $b$ = `r round(s2_reg$fixed[9,1],3)`, 95% CI: [`r round(s2_reg$fixed[9,3], 3)`, `r round(s2_reg$fixed[9,4], 3)`]). We consider this to be a full replication of Horne, Powell, et al.’s [-@horne.etal2015] results. See Figure 3, panel A.
+We conducted a mixed-effects Bayesian ordinal regression to assess the effects of the disease risk intervention on responses to the *Vaccination Intentions* scale items, using the “brms” package for R [@burkner2017]. We regressed responses on phase (Phase 1 vs. 2, dummy-coded with Phase 1 as the baseline), condition (dummy-coded with the disease risk condition as the baseline, so as to assess difference scores in our condition of primary interest), and the interaction between phase and condition. We included random intercepts by subject and scale item. In this model, the unique effect of the intervention on vaccination intention scores is assessed by the interaction term (indicating the unique effect of Phase 2 for intervention versus no-intervention participants). The disease risk intervention increased participants’ vaccination intention ratings (interaction effect: $b$ = `r round(s2_reg$fixed[9,1],3)`, 95% CI: [`r round(s2_reg$fixed[9,3], 3)`, `r round(s2_reg$fixed[9,4], 3)`]). We consider this to be a full replication of Horne and colleagues' [-@horne.etal2015] results. See Figure 3, panel A.
 
 Visual inspection of Figure 3, panel A, further reveals that changes were also observed across the belief network identified in Study 1. Not only did participants exposed to the intervention come to see childhood diseases as more severe, they also came to see vaccines as less dangerous, and demonstrated less medical skepticism as well as less commitment to “holistic balance”. These results suggest that targeted educational interventions could have wide-ranging effects, from influencing who people turn to for future information, to shaping the more abstract worldviews they bring to bear in understanding health and science.
 
@@ -260,7 +260,7 @@ Visual inspection of Figure 3, panel A, further reveals that changes were also o
 knitr::include_graphics("../local/s2_plt.png")
 ```
 
-#### Modeling belief revision.
+#### Modeling belief revision
 
 How did this intervention---which focused solely on the dangers of childhood diseases---affect beliefs about *vaccine danger*, *medical skepticism*, *holistic balance*, and so on? One explanation is that this intervention provides direct evidence for *disease severity* beliefs and that other beliefs are revised as a result of their relationships with *disease severity* as captured in the intuitive theory. To examine this, we used the same model developed in Study 1 to simulate how the 13 other beliefs in the intuitive theory would change as a result of the intervention's direct effect on *disease severity* beliefs.
 
@@ -278,7 +278,7 @@ Given that our cognitive model is parameterized via noisy-logical functions, it 
 
 ## Study 3a and 3b: Targeting beliefs about vaccine toxicity
 
-The intervention developed by Horne et al. [-@horne.etal2015] and employed in Study 2 is notable for being one of the few educational interventions shown to decrease vaccine hesitancy---but is disease severity the only (or most) effective target for educational interventions in this domain? 
+The intervention developed by Horne and colleagues [-@horne.etal2015] and employed in Study 2 is notable for being one of the few educational interventions shown to decrease vaccine hesitancy---but is disease severity the only (or most) effective target for educational interventions in this domain? 
 
 One advantage of having developed a formal, computational representation of a network of beliefs supporting vaccination decisions is that it can guide our search for effective interventions, allowing us to compare how interventions targeting each of these other beliefs might potentially change people’s vaccination intentions (see Figure 4). Countering myths about toxic additives is one approach the model developed in Study 1 predicts should be effective.
 
@@ -322,7 +322,7 @@ s3_reg <- summary(results$s3$reg)
 
 As they shared the same design, we combined data from Studies 3a and 3b for analysis (but see SI for separate analyses by study). As in Study 2, we conducted a mixed-effects Bayesian ordinal regression to assess the effects of the vaccine ingredients intervention on participants’ *vaccination intentions* scores. The vaccine ingredients intervention improved participant’s vaccination intention scores relative to the control conditions (interaction effect: $b$ = `r round(s3_reg$fixed[9,1],3)`, 95% CI: [`r round(s3_reg$fixed[9,3], 3)`, `r round(s3_reg$fixed[9,4], 3)`]); see Figure 5, panel A. It is worth noting that reliable changes were also observed from pretest to posttest in the control conditions (phase effect: $b$ = `r round(s3_reg$fixed[7,1],3)`, 95% CI: [`r round(s3_reg$fixed[7,3], 3)`, `r round(s3_reg$fixed[7,4], 3)`]), suggesting that these attitudes were also being influenced by other factors during the course of the study. We discuss this further below, but given that these studies were randomized controlled trial designs, these findings do not impair our ability to conclude that the intervention was causally efficacious in affecting vaccine intentions.
 
-#### Modeling belief revision.
+#### Modeling belief revision
 
 To model the effect of the vaccine ingredients intervention, we followed the same procedure as in Study 2, but this time augmented the model with a node representing the vaccine ingredients intervention as a child of the vaccine toxins belief node (for details, see SI). This allowed us to predict how other beliefs in the network would change in light of the observed changes participant’s beliefs about whether vaccines contain dangerous toxins; see Figure 5, panel B.
 
@@ -362,7 +362,7 @@ s4_reg <- summary(results$s4$reg)
 
 Mirroring our analyses of interventions, we regressed responses to the *vaccine intentions* scale items on predictors for phase (August-September 2017 vs. May 2019, dummy-coded), news exposure (dummy-coded with non-exposure as the baseline), and an interaction between phase and news exposure onto participants’ scores, using a Bayesian mixed-effects ordinal regression including random intercepts by subject and item. To assess the effects of recent news exposure on vaccine intentions, we examined the interaction between phase and news exposure. Participants’ vaccine intentions were increased by recent news exposure compared to their responses 18 months earlier (interaction effect: $b$ = `r round(s4_reg$fixed[9,1],3)`, 95% CI: [`r round(s4_reg$fixed[9,3], 3)`, `r round(s4_reg$fixed[9,4], 3)`]); see Figure 6, panel A. 
 
-#### Modeling belief revision.
+#### Modeling belief revision
 
 Were changes in participants' beliefs following exposure to news of the measles outbreak coherent with respect to the intuitive theory specified by the model developed in Study 1? Unlike in the intervention studies, where a specific belief was targeted by the intervention, it is likely that many beliefs were addressed by media coverage of these outbreaks. To assess whether these changes were coherent, we examined how they were related to the most central of the beliefs we measured, *vaccine intentions*, using our model to predict how the 13 other beliefs in the intuitive theory should be expected to change given the average magnitude of the change observed in *vaccine intentions.* That is, we followed the same procedure as in previous studies, but here augmented the model with a node representing media exposure as a child of the *vaccine intentions* node. 
 
@@ -382,17 +382,17 @@ More broadly, the approaches we have introduced here may shed light on long-stan
 
 Though these studies were conducted before the onset of the COVID-19 pandemic and focused on childhood diseases, many similar concerns are likely to animate hesitancy toward COVID-19 vaccines, and our findings may provide some leverage into addressing the current surge of vaccine hesitancy.
 
-First, in the spirit of Horne et al.’s [-@horne.etal2015] disease risk intervention, we suspect that education focused on how severely ill many people become and the prevalence of long-term health problems following even mild cases of COVID-19 might encourage people to accept coronavirus vaccines. Indeed, controlled intervention studies have shown that messages focused on personal risk increase vaccination intentions [@motta.etal2021]. However, as the pandemic has continued, it has become clear that the severity of COVID-19 is highly variable across individuals and across variants of the virus, potentially rendering the formation, updating, and use of beliefs about severity much more nuanced in the case of COVID-19 than in the case of diseases like measles. 
+First, in the spirit of Horne and colleagues’ [-@horne.etal2015] disease risk intervention, we suspect that education focused on how severely ill many people become and the prevalence of long-term health problems following even mild cases of COVID-19 might encourage people to accept coronavirus vaccines. Indeed, controlled intervention studies have shown that messages focused on personal risk increase vaccination intentions [@motta.etal2021]. However, as the pandemic has continued, it has become clear that the severity of COVID-19 is highly variable across individuals and across variants of the virus, potentially rendering the formation, updating, and use of beliefs about severity much more nuanced in the case of COVID-19 than in the case of diseases like measles. 
 
 Our findings also suggest that beliefs about vaccine efficacy are central to determining vaccination intentions. In the case of mumps, measles, and rubella, strong vaccines and robust vaccination campaigns have led to the near eradication of these diseases in the U.S. and other developed nations. Correspondingly, we observed most participants in our studies believed quite strongly that these vaccines are effective in preventing infection. In contrast, the high prevalence of COVID-19 makes the risk of infection substantial even for the vaccinated, although these vaccines remain highly effective at preventing severe illness and death. The rising prevalence of breakthrough infections and the need for boosters relatively soon after initial doses are likely to lead people to doubt the effectiveness of vaccines---but we see promise in educational interventions that clarify the many ways in which a vaccine can be “effective” (e.g., by preventing infection vs. by preventing severe illness, preventing death, or lowering transmissibility), or explain the need for booster shots (e.g., addressing the misconception that the need for a booster shot indicates a problem with the vaccine).
 
-The coronavirus pandemic has also presented its own unique challenges. In the U.S. and abroad, COVID-19 vaccines and mitigation measures have become deeply politicized, which may complicate the role of intuitive theories in people’s vaccination decisions. Political affiliations often imply concrete beliefs about the world that could be incorporated into a model of an intuitive theory: for instance, that COVID-19 is "like the flu" or that infection can be treated with off-label pharmaceuticals. Still, these affiliations are also associated with social commitments, personal values, and other identity-constituting “beliefs” that may be more challenging to capture in an intuitive theory as we have conceived of it here [@vanleeuwen2014]. 
+Looking forward, living through the COVID-19 pandemic is likely to have deepened the public’s understanding of infectious diseases and public health. For example, the concept of “herd immunity” has likely never had greater public understanding and appreciation than now. This understanding seems like a prime target for future interventions aimed at increasing the uptake of vaccines for both COVID and other diseases—although its impacts are likely to depend on other auxiliary ethical commitments, such as moral beliefs about individuals’ obligations to their wider communities.
 
-In concert with its politicization, the pandemic has fueled a flurry of novel conspiracy theories. Through exposure to misinformation, not-insignificant numbers of people have come to believe that COVID-19 is caused by 5G telecommunications, that the virus was developed in a lab to be used as a bio-weapon, or even that the virus is not real at all, and instead is a "hoax" perpetrated by a globalist elite. As is the case with attempts to debunk the misconception that childhood vaccines cause autism, directly addressing these false conspiracy theories could prove to be extremely difficult. More promisingly, general education about COVID-19 vaccines may help to address these misconceptions indirectly. Our findings demonstrate that general beliefs, such as skeptical beliefs about the medical community, are revised in light of evidence concerning specific diseases or vaccines. 
+Unfortunately, the scale and spread of dis- and misinformation about COVID-19 has far eclipsed the spread of fringe ideas about MMR vaccines: millions of people have come to believe that COVID-19 is caused by 5G telecommunications, that the virus was developed in a lab to be used as a bio-weapon, or even that the virus is not real at all, and instead is a "hoax" perpetrated by a globalist elite. As is the case with attempts to debunk the misconception that childhood vaccines cause autism, directly addressing these false conspiracy theories could prove to be extremely difficult. However, there is some cause for hope that clear education about COVID-19 vaccines may help to address these misconceptions indirectly. Our findings demonstrate that revising beliefs about  specific diseases or vaccines can have “upstream” consequences for more abstract beliefs, such as naturalism and medical skepticism—hinting at a novel approach for addressing the kinds of fringe theories that have emerged during the pandemic.
 
-Looking forward, living through the COVID-19 pandemic is likely to have deepened the public’s understanding of infectious diseases and public health. For example, the concept of “herd immunity” has likely never had greater public understanding and appreciation than now. This understanding seems like a prime target for future interventions aimed at increasing the uptake of vaccines for both COVID-19 and other diseases---although its impacts are likely to depend on other auxiliary ethical commitments, such as moral beliefs about individuals’ obligations to their wider communities.
+Finally, like all pandemics, the COVID-19 pandemic is inescapably social. For one, in the U.S. and abroad, COVID-19 vaccines and mitigation measures have become deeply politicized. According to Gallup polling in the U.S., COVID-19 vaccination rates have at times been nearly twice as high among Democrats as among Republicans [@gallup2021]. Messages from political elites often imply concrete beliefs about the world that could be incorporated into a model of an intuitive theory: for instance, that COVID-19 is "like the flu" or that infection can be treated with off-label pharmaceuticals—or, conversely, that COVID-19 vaccines are safe and effective. Still, these affiliations are also associated with social commitments and personal values that may behave differently than the beliefs examined here. Whereas beliefs about “matters of fact” might be driven by an underlying intuitive theory and thereby sensitive to evidence, these sorts of identity-constituting “beliefs” may operate by different principles [@vanleeuwen2014] or may be entirely socially-motivated [@kahan2016].
 
-In addition, the COVID-19 pandemic has raised public awareness of how social group membership modulates individuals’ experiences of the world---and, by extension, their intuitive theories of how the world works. In particular, the uneven impacts of the pandemic have laid bare inequities within the American healthcare system, prompted a greater awareness of and reckoning with a history of racism and abuses by the medical community. People from different social groups---for example, White vs. Black Americans---are likely to have different first-hand experiences with doctors, are exposed to different second-hand accounts of interactions with the healthcare system, and have different levels of awareness of relevant historical events (e.g., the Tuskegee Syphilis Study) For these reasons, their intuitive theories of vaccination and the medical establishment more broadly may differ in important ways. The interconnections among social group membership, personal experience, intuitive theories, and health outcomes are well worth further exploration in future studies. 
+More broadly, people from different social groups have different experiences and knowledge that are likely to shape their intuitive theories of vaccination and the medical establishment in important ways—something that the approach we have taken in the current studies does not yet account for. For example, White vs. Black Americans are likely to have different experiences with medical racism. Future work should explore how differences in people’s wider intuitive theories might explain vaccination behaviors, as well as how a more nuanced understanding of these theories might support messages tailored to different individuals and communities.
 
 ## Conclusions
 
