--- a/supplement/references.bib
+++ b/supplement/references.bib
@@ -298,28 +298,19 @@
   number = {1}
 }
 
-@article{gerstenberg.etal2020,
-  title = {A Counterfactual Simulation Model of Causal Judgments for Physical Events},
-  author = {Gerstenberg, Tobias and Goodman, Noah and Lagnado, David and Tenenbaum, Joshua},
-  year = {2020},
-  month = mar,
-  publisher = {{PsyArXiv}},
-  doi = {10.31234/osf.io/7zj94},
-  abstract = {How do people make causal judgments about physical events? We introduce the counterfactual simulation model (CSM) which predicts causal judgments in physical settings by comparing what actually happened with what would have happened in relevant counterfactual situations. The CSM postulates different aspects of causation that capture the extent to which a cause made a difference to whether and how the outcome occurred, and whether the cause was sufficient and robust. We test the CSM in several experiments in which participants make causal judgments about dynamic collision events. A preliminary study establishes a very close quantitative mapping between causal and counterfactual judgments. Experiment 1 demonstrates that counterfactuals are necessary for explaining causal judgments. Participants' judgments differed dramatically between pairs of situations in which what actually happened was identical, but where what would have happened differed. Experiment 2 features multiple candidate causes and shows that participants' judgments are sensitive to different aspects of causation. The CSM provides a better fit to participants' judgments than a heuristic model which uses features based on what actually happened. We discuss how the CSM can be used to model the semantics of different causal verbs, how it captures related concepts such as physical support, and how its predictions extend beyond the physical domain.},
-  file = {/Users/dmpowell/Documents/Papers/gerstenberg et al-2020-a counterfactual simulation model of causal judgments for physical events.pdf},
-  keywords = {causality,Cognitive Psychology,Concepts and Categories,counterfactuals,intuitive physics,Judgment and Decision Making,mental simulation,Reasoning,Social and Behavioral Sciences}
-}
-
 @article{gerstenberg.etal2021,
   title = {A Counterfactual Simulation Model of Causal Judgments for Physical Events.},
   author = {Gerstenberg, Tobias and Goodman, Noah D. and Lagnado, David A. and Tenenbaum, Joshua B.},
   year = {2021},
-  month = jun,
+  month = oct,
+  journal = {Psychological Review},
+  volume = {128},
+  number = {5},
+  pages = {936--975},
   issn = {1939-1471, 0033-295X},
   doi = {10.1037/rev0000281},
-  file = {/Users/dmpowell/Documents/Papers/gerstenberg et al-2021-a counterfactual simulation model of causal judgments for physical events.pdf},
-  journal = {Psychological Review},
-  language = {en}
+  langid = {english},
+  file = {/Users/dmpowell/Documents/Papers/gerstenberg et al-2021-a counterfactual simulation model of causal judgments for physical events2.pdf}
 }
 
 @incollection{gerstenberg.tenenbaum2017,
@@ -484,6 +475,22 @@
   number = {4}
 }
 
+@incollection{kahan2016,
+  title = {The {{Politically Motivated Reasoning Paradigm}}, {{Part}} 1: {{What Politically Motivated Reasoning Is}} and {{How}} to {{Measure It}}},
+  shorttitle = {The {{Politically Motivated Reasoning Paradigm}}, {{Part}} 1},
+  booktitle = {Emerging {{Trends}} in the {{Social}} and {{Behavioral Sciences}}},
+  author = {Kahan, Dan M.},
+  editor = {Scott, Robert A and Kosslyn, Stephan M},
+  year = {2016},
+  month = nov,
+  edition = {First},
+  pages = {1--16},
+  publisher = {{Wiley}},
+  doi = {10.1002/9781118900772.etrds0417},
+  isbn = {978-1-118-90077-2},
+  langid = {english}
+}
+
 @incollection{keil1994,
   title = {The Birth and Nurturance of Concepts by Domains: {{The}} Origins of Concepts of Living Things},
   shorttitle = {The Birth and Nurturance of Concepts by Domains},
@@ -499,24 +506,7 @@
   isbn = {978-0-521-41966-6 978-0-521-42993-1 978-0-511-75290-2}
 }
 
-@incollection{kahan2016,
-	title = {The {Politically} {Motivated} {Reasoning} {Paradigm}, {Part} 1: {What} {Politically} {Motivated} {Reasoning} {Is} and {How} to {Measure} {It}},
-	isbn = {978-1-118-90077-2},
-	shorttitle = {The {Politically} {Motivated} {Reasoning} {Paradigm}, {Part} 1},
-	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/9781118900772.etrds0417},
-	abstract = {Recent research identifies politically motivated reasoning as the source of persistent public conflict over policy-relevant facts. This essay, the first in a two-part set, presents a basic conceptual model—the Politically Motivated Reasoning Paradigm—and an experimental setup—the PMRP design—geared to distinguishing the influence of PMRP from a truth-seeking Bayesian process of information processing and from recurring biases understood to be inimical to the same. It also discusses alternative schemes for operationalizing “motivating” group predispositions and the characteristics of valid study samples for examining this phenomenon.},
-	language = {en},
-	urldate = {2022-02-10},
-	booktitle = {Emerging {Trends} in the {Social} and {Behavioral} {Sciences}},
-	publisher = {John Wiley \& Sons, Ltd},
-	author = {Kahan, Dan M.},
-	year = {2016},
-	doi = {10.1002/9781118900772.etrds0417},
-	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/9781118900772.etrds0417},
-	keywords = {information processing, motivation, policy, politically motivated reasoning, public conflict},
-	pages = {1--16},
-	file = {Snapshot:/Users/derekpowell/Zotero/storage/RSKLAGEC/9781118900772.html:text/html},
-}
+
 
 @article{kunda1990,
   title = {The Case for Motivated Reasoning.},
@@ -576,22 +566,20 @@
 }
 
 @article{mcfadden.etal2010,
-  title = {Attitudes toward Complementary and Alternative Medicine Influence Its Use},
+  title = {Attitudes {{Toward Complementary}} and {{Alternative Medicine Influence Its Use}}},
   author = {McFadden, Kristina L. and Hern{\'a}ndez, Theresa D. and Ito, Tiffany A.},
-  year = {2010 Nov-Dec},
+  year = {2010},
+  month = nov,
+  journal = {EXPLORE},
   volume = {6},
-  pages = {380--388},
-  issn = {1878-7541},
-  doi = {10.1016/j.explore.2010.08.004},
-  abstract = {OBJECTIVE: The aim of this study was to explore how attitudes toward complementary and alternative medicine (CAM) and conventional medicine influence CAM use in a healthy population, and how health locus of control and exercise further affect CAM use. DESIGN: A cross-sectional survey design was used. PARTICIPANTS: The sample consisted of 65 healthy graduate students. MAIN OUTCOME MEASURES: Since previous studies have focused on the attitudes of medical providers toward CAM, there are currently no standard, widely used measures of attitudes toward CAM from the perspective of the healthcare recipient. Thus, a new measure, the Complementary, Alternative, and Conventional Medicine Attitudes Scale (CACMAS) was created to address how attitudes of healthcare recipients affect CAM use. The Multidimensional Health Locus of Control Scale (MHLC) was used to investigate effects of health locus of control on CAM use, and participants reported which of 17 listed CAM treatments they had used in the past, were currently using, or would likely use in the future. Participants also reported days of exercise in the past month to explore if those engaging in healthy behaviors might report more CAM use. RESULTS: Having a philosophical congruence with CAM and agreement with holistic balance was associated with increased CAM use. Dissatisfaction with conventional medicine was also related to increased CAM use, but to a lesser extent. Those attributing health to personal behaviors (an internal health locus of control) reported more CAM use, as did those engaging in more resistance training in the previous month.},
-  file = {/Users/dmpowell/Documents/Papers/mcfadden et al-2010-attitudes toward complementary and alternative medicine influence its use.pdf},
-  journal = {Explore (New York, N.Y.)},
-  keywords = {Adult,Complementary Therapies,Cross-Sectional Studies,Female,Health Behavior,Health Knowledge; Attitudes; Practice,Humans,Internal-External Control,Male,Medicine,Patient Satisfaction,Resistance Training,Self Efficacy,Surveys and Questionnaires},
-  language = {eng},
   number = {6},
-  pmcid = {PMC3011931},
-  pmid = {21040887}
+  pages = {380--388},
+  issn = {15508307},
+  doi = {10.1016/j.explore.2010.08.004},
+  langid = {english},
+  file = {/Users/dmpowell/Documents/Papers/mcfadden et al-2010-attitudes toward complementary and alternative medicine influence its use2.pdf}
 }
+
 
 @book{medin.atran1999,
   title = {Folkbiology},
@@ -663,13 +651,14 @@
 }
 
 @book{pearl1988,
-  title = {Probabilistic Reasoning in Intelligent Systems: Networks of Plausible Inference},
+  title = {Probabilistic Reasoning in Intelligent Systems},
   shorttitle = {Probabilistic Reasoning in Intelligent Systems},
   author = {Pearl, Judea},
   year = {1988},
-  annotation = {OCLC: 1099309722},
+  publisher = {{Morgan Kaufmann}},
   isbn = {978-0-08-051489-5},
-  language = {English}
+  langid = {english},
+  annotation = {OCLC: 1099309722}
 }
 
 @inproceedings{pine.etal2021,
@@ -948,12 +937,15 @@
   number = {9}
 }
 
-@article{williamson2001,
+@inproceedings{williamson2001,
   title = {Bayesian {{Networks}} for {{Logical Reasoning}}},
+  booktitle = {Proceedings of the {{AAAI Fall Symposium}} on Using {{Uncertainty}} within {{Computation}}},
   author = {Williamson, Jon},
+  editor = {Gomez, Carla and Walsh, Toby},
   year = {2001},
-  pages = {8},
+  pages = {136--143},
+  address = {{AAAI Press Technical Report FS-01-04}},
   abstract = {Byidentifying andpursuinganalogiesbetweencausaland logical influenceI showhowthe Bayesiannetworkformalismcanbe appliedto reasoninagboutlogicaldeductions.},
-  file = {/Users/dmpowell/Documents/Papers/Williamson - Bayesian Networks for Logical Reasoning 2.pdf},
-  language = {en}
+  langid = {english},
+  file = {/Users/dmpowell/Documents/Papers/Williamson - Bayesian Networks for Logical Reasoning 2.pdf}
 }
